--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -8,7 +8,7 @@
         {% for blogpost in blogposts %}
             <h2><a href="{{ blogpost.url }}">{{ blogpost.title }}</a></h2>
             <div>{{ blogpost.intro|richtext }}</div>
-            <a href="{{ blogpost.url }}">Read More...</a>
+            <p><a href="{{ blogpost.url }}">Read More...</a></p>
         {% endfor %}
     {% else %}
         <h2>No Posts Avaiable</h2>
