--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -45,6 +45,7 @@
                         {% if user.is_authenticated %}
                             <li class="nav-item"><a class="nav-link" href="/blog/">Blog</a></li>
                             <li class="nav-item"><a class="nav-link" href="/projects/">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'notes:graph_page' %}">Documents</a></li>
                         {% endif %}
                     </ul>
 
