--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -52,6 +52,7 @@
                     <ul class="navbar-nav ms-auto">
                         {% if user.is_authenticated %}
                             <li class="nav-item">
+                                <li class="nav-item"><a class="nav-link" href="{% url 'blog:create_post' %}">Create Post</a></li>
                                 <form action="{% url 'logout' %}" method="post" class="d-inline">
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-outline-light btn-sm">Logout</button>
